--- a/app/build.gradle
+++ b/app/build.gradle
@@ -84,6 +84,7 @@ dependencies {
 
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    implementation 'com.quickbirdstudios:opencv:4.5.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation project(':documentscanner')
 }
