--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
         android:name=".App"
         android:allowBackup="true"
         android:largeHeap="true"
+        android:hardwareAccelerated="true"
         android:requestLegacyExternalStorage="true"
         android:icon="@mipmap/ic_shortcut_camera_rear"
         android:label="@string/app_name"
